Zip up stable articles in XML format, for About page.
Now the Ant build file created by generate_static_issues.xsl also
includes a target for zipping up only those articles which can be
considered stable. The ZIP is stored at data/dhq-xml.zip and is
referenced by the DHQ About page.

--- a/build.xml
+++ b/build.xml
@@ -141,7 +141,7 @@ is loaded when Ant starts up. Please run Ant again like this:
     </copy>
     <!-- Copy text files in the submissions directory. -->
     <copy todir="${toDir.static}${file.separator}submissions">
-      <fileset dir="submissions" includes="*.txt"/>
+      <fileset dir="submissions" includes="*.txt *.xml"/>
     </copy>
     <!-- Copy web assets. -->
     <copy todir="${toDir.static}${file.separator}common">
@@ -201,6 +201,13 @@ is loaded when Ant starts up. Please run Ant again like this:
       <param name="assets-path" expression="..${file.separator}"/>
       <param name="context" expression="dhq"/>
     </xslt>
+    <!-- Generate the ZIP file of all articles' XML. -->
+    <mkdir dir="${toDir.static}${file.separator}data"/>
+    <!-- Use the Ant build file created in "generateIssues" to zip up all article 
+      XML. -->
+    <ant antfile="${toDir.base}${file.separator}article-map.xml" dir="${basedir}" 
+         target="zipArticleXml" inheritRefs="true"/>
+    <!-- Generate the ZIP file of the entire static site. -->
     <antcall target="compressStatic"/>
   </target>
   
