--- a/build.xml
+++ b/build.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns:if="ant:if" xmlns:unless="ant:unless" 
    name="dhq"
    default="previewArticle">
@@ -35,6 +37,20 @@
   <available classname="org.xmlresolver.Resolver" property="has.xmlresolver"/>
   
   
+  <!-- The general set of article files to process (used for
+       validation, not static generation) -->
+  <fileset dir="./articles" id="article.files">
+    <include name="0*/0*.xml"/>
+  </fileset>
+
+  <!--
+      DEFINE TASKS
+  -->
+  <!-- I am not sure if this should go in build-properties.xml
+       instead, but since it is currently unused, it probably does not
+       matter at all. — Syd, 2024-01-28 -->
+  <taskdef name="jing" classpath="${jingJar}" classname="com.thaiopensource.relaxng.util.JingTask"/>
+
   <!-- 
     ANT TASKS
   -->
@@ -101,6 +117,20 @@ is loaded when Ant starts up. Please run Ant again like this:
     <echo>  As above, but also ZIPs up the entire ${toDir.static}/ directory to make</echo>
     <echo>  it easy to transfer (e.g., to a server). The output file can be found at</echo>
     <echo>  ${toDir.base}${file.separator}${context}.zip.</echo>
+  <echo>wf</echo>
+    <echo>  (well-formedness) Check all articles/0*/0*.xml files for well-formedness.</echo>
+    <echo>  Take heed, though: the message says “valid” where it means “well-formed”.</echo>
+    <echo>validateClosed</echo>
+    <echo>  Tests all articles/0*/0*.xml files against ${closedSchema} using jing.</echo>
+    <echo>  WARNING: Does this in parallel which means it is very fast, but also that it</echo>
+    <echo>  stops checking on the first file that is not well-formed!</echo>
+    <echo>validateOpen</echo>
+    <echo>  Tests all articles/0*/0*.xml files against ${openSchema} using schXslt.</echo>
+    <echo>  WARNING: Does this in parallel which means it is very fast, but also that it</echo>
+    <echo>  stops checking on the first file that is not well-formed! NOT YET WORKING.</echo>
+    <echo>saxon</echo>
+    <echo>  Run the stylesheet provided by “-Dxsl=” on all articles/0*/0*.xml files; output</echo>
+    <echo>  goes into /tmp/articles/ overwriting anything already there. NOT YET WORKING.</echo>
   </target>
 
   <!-- Generate static HTML versions of the DHQ issues (articles, bios, & indices). -->
@@ -286,4 +316,76 @@ is loaded when Ant starts up. Please run Ant again like this:
     </zip>
   </target>
   
+<!-- Check articles for well-formedness -->
+  <target name="wf" description="Check all article files (./articles/0*/0*.xml) for well-formedness">
+    <echo level="info" message="========= checking for well-formedness"/>
+    <xmlvalidate failonerror="no" lenient="true" warn="yes">
+      <!-- <attribute name="http://xml.org/sax/features/namespaces" value="true"/> -->
+      <!-- <attribute name="http://xml.org/sax/features/namespace-prefixes" value="true"/> -->
+      <fileset refid="article.files"/>
+    </xmlvalidate>
+    <echo level="info" message='Note: the word “validated” on the line above means “checked for well-formedness”.'/>
+  </target>
+
+  <!-- Run an XSLT routine over all articles using Saxon -->
+  <target name="saxon" description="*** not working ***">
+    <echo level="info" message="========= running XSLT (using Saxon) ..."/>
+    <!-- currently still only 1 article … have to figure out how to do all and change style= to specified stylesheet —Syd, 2024-01-06 -->
+    <xslt in="articles/${article.id}/${article.id}.xml" 
+          out="${previewDir}/${article.id}.html"
+          style="common/xslt/template_article.xsl"
+          classpath="${processor.location}"
+          force="true"
+          failOnTransformationError="false">
+      <factory name="${processor.name}"/>
+      <param name="assets-path" expression="${assets.path}"/>
+      <param name="context" expression="dhq"/>
+      <param name="dir-separator" expression="/"/>
+      <param name="doProofing" expression="true"/>
+    </xslt>
+  </target>
+
+  <target name="validate" description="Check all article files (./articles/0*/0*.xml) for validity (against several schemas)">
+    <antcall target="validateClosed"/>
+    <antcall target="validateOpen"/>
+  </target>
+
+  <target name="validateClosed" description="Check all article files (./articles/0*/0*.xml) for validity against ${closedSchema}">
+    <!-- Note-to-self: following line should test $excludeFromValidation and skip the “EXCEPT …” part iff it is empty. Someday. -->
+    <echo level="info" message="========= testing for validity against ${closedSchema} EXCEPT for ${excludeFromValidation} ..."/>
+    <apply executable="java" parallel="true" failonerror="false">
+      <arg value="-jar"/>
+      <arg value="${jingJar}"/>
+      <arg value="-i"/>
+      <arg value="${closedSchema}"/>
+      <srcfile/>
+      <path>
+	<fileset refid="article.files"/>
+      </path>
+    </apply>
+  </target>
+
+  <target name="validateOpen" description="Check all article files (./articles/0*/0*.xml) for validity against ${openSchema}">
+    <!-- Note-to-self: following line should test $excludeFromValidation and skip the “EXCEPT …” part iff it is empty. Someday. -->
+    <echo level="info" message="========= testing for validity against ${openSchema} EXCEPT for ${excludeFromValidation} ..."/>
+    <apply executable="java" parallel="true" failonerror="false">
+      <arg value="-jar ${processor.location}/${processor.name}"/>
+      <arg value="-xsl:${mausatron.compiler}"/>
+      <srcfile/>
+      <path>
+	<fileset dir="." includes="${openSchema}"/>
+      </path>
+      <targetfile/>
+      <mapper type="regexp" from="^(.*\.)(iso)?sch$" to="\1xslt"/>
+    </apply>
+  </target>
+  
+  <!-- Currently unused. Leaving here to check it into git at least
+       once, after which I think we could get rid of it. —Syd,
+       2024-01-28 -->
+  <target name="relaxng">
+    <echo level="verbose" message="${inFile}:0:0: checking validity against ${closedSchema} at ${currentTime} ..."/>
+    <jing failonerror="false" rngfile="${closedSchema}" file="${inFile}" checkid="false"/>
+  </target>
+
 </project>
