Remove some unused stuff:  * a task that demonstrated a method of calling jing via ant;  * a bunch of commented-out attempts at getting mutli-file XSLT to work via 'apply' task.

--- a/build.xml
+++ b/build.xml
@@ -54,13 +54,6 @@
   <property name="processor.name" value="net.sf.saxon.BasicTransformerFactory"/>
   <property name="processor.location" value="common${file.separator}lib${file.separator}saxon"/>  
 
-  <!--
-      DEFINE TASKS
-  -->
-  <!-- I am not sure if this should go in build-properties.xml
-       instead, but since it is currently unused, it probably does not
-       matter at all. — Syd, 2024-01-28 -->
-  <taskdef name="jing" classpath="${jingJar}" classname="com.thaiopensource.relaxng.util.JingTask"/>
 
   <!-- 
     ANT TASKS
@@ -421,72 +414,7 @@ is loaded when Ant starts up. Please run Ant again like this:
       <factory name="${processor.name}"/>
       <fileset refid="article.files.2validate"/>
     </xslt>
-    <!--
-        various methods I have tried but did not work; leaving
-        them here for at least 1 git commit just for a historical
-        record of failures, I guess. —Syd, 2024-02-13
-    <apply executable="java" parallel="true" failonerror="false">
-      <arg value="-jar"/>
-      <arg value="${processor.location}/${processor.jarFile}"/>
-      <arg value="-xsl:${mausatronXSLT.compiler}"/>
-      <srcfile/>
-      <path>
-        <fileset dir="${schemaDir}">
-          <include name="${openSchema1}"/>
-          <filename name="${openSchema2}"/>
-        </fileset>
-      </path>
-    </apply>
-    <apply executable="java" parallel="true" failonerror="false">
-      <arg value="-jar"/>
-      <arg value="${processor.location}/${processor.jarFile}"/>
-      <arg value="-xsl:${mausatronXSLT.compiler}"/>
-      <arg value="-s:${openSchema1}"/>
-      <fileset dir=".">
-        <filename name="NON-EXISTENT_PLACEHOLDER"/>
-      </fileset>
-    </apply>
-    <apply executable="java" parallel="true" failonerror="false">
-      <arg value="-jar"/>
-      <arg value="${processor.location}/${processor.jarFile}"/>
-      <arg value="-xsl:${mausatronXSLT.compiler}"/>
-      <fileset dir="">
-        <filename name="-s:${openSchema1}"/>
-        <filename name="-s:${openSchema2}"/>
-      </fileset>
-    </apply>
-    <apply executable="java" parallel="true" failonerror="false">
-      <arg value="-jar"/>
-      <arg value="${processor.location}/${processor.jarFile}"/>
-      <arg value="-xsl:DEBUG.xslt"/>
-      <arg value="-s:/tmp/trda.odd"/>
-      <arg value="-o:/tmp/QUACK"/>
-    </apply>
-    <apply executable="java" parallel="true" failonerror="false">
-      <arg value="-jar"/>
-      <arg value="${processor.location}/${processor.jarFile}"/>
-      <arg value="-xsl:${mausatronXSLT.compiler}"/>
-      <arg value="-s:${openSchema1}"/>
-      <targetfile/>
-      <mapper type="regexp" from="^(.*\.)(iso)?sch$" to="-o:\1xslt"/>
-    </apply>
-    <apply executable="java" parallel="true" failonerror="false">
-      <arg value="-jar"/>
-      <arg value="${processor.location}/${processor.jarFile}"/>
-      <arg value="-xsl:${mausatronXSLT.compiler}"/>
-      <arg value="-s:${openSchema2}"/>
-      <targetfile/>
-      <mapper type="regexp" from="^(.*\.)(iso)?sch$" to="-o:\1xslt"/>
-    </apply>
-    -->
+    <!-- See commit 7383668d for some methods that did not work. -->
   </target>
   
-  <!-- Currently unused. Leaving here to check it into git at least
-       once, after which I think we could get rid of it. —Syd,
-       2024-01-28 -->
-  <target name="relaxng">
-    <echo level="verbose" message="${inFile}:0:0: checking validity against ${closedSchema} at ${currentTime} ..."/>
-    <jing failonerror="false" rngfile="${closedSchema}" file="${inFile}" checkid="false"/>
-  </target>
-
 </project>
