Add search capability, take 3, step 1:  * Separate out compression of generated site into new target so that I do not have to wait for ZIPping every time I test  * Update help output to match  * Fix typo in topnavigation

--- a/build.xml
+++ b/build.xml
@@ -89,17 +89,23 @@ is loaded when Ant starts up. Please run Ant again like this:
     <echo>  and the ZIP file are put in the ${previewDir}${file.separator} subdirectory, overwrit-</echo>
     <echo>  ing any previous version there.</echo>
     <echo>generateIssues</echo>
-    <echo>  generates the entire static site — index pages and HTML for each issue</echo>
-    <echo>  listed in the toc${file.separator}toc.xml file, including the article itself, the author</echo>
+    <echo>  generates the index pages and HTML for each issue listed in the</echo>
+    <echo>  toc${file.separator}toc.xml file, including the article itself, the author</echo>
     <echo>  biographies, and the “landing” page. The output is placed in the</echo>
-    <echo>  ${toDir.static}/ directory, i.e. in a sibling to this directory, over-</echo>
+    <echo>  ${toDir.static}${file.separator} directory, i.e. in a sibling to this directory, over-</echo>
     <echo>  writing any previous version. (Some temporary files are also placed in</echo>
-    <echo>  ${toDir.base}/.) The output is designed to be viewed from a server, as</echo>
+    <echo>  ${toDir.base}${file.separator}.) The output is designed to be viewed from a server, as</echo>
     <echo>  it uses absolute filepaths to its assets. Thus it will not work properly</echo>
     <echo>  (and will look ugly) if viewed on your local machine.</echo>
     <echo>generateSite</echo>
-    <echo>  As above, but also ZIPs up the entire ${toDir.static}/ directory to make</echo>
-    <echo>  it easy to transfer (e.g., to a server). The output file can be found at</echo>
+    <echo>  As above, but also copies over each article’s resources, various web assets, and the</echo>
+    <echo>  required bits of the submissions${file.separator} &amp; common${file.separator} subdirectories; obtains the XHTML 1.0</echo>
+    <echo>  strict DTD; adds headers &amp; footers to static pages; and creates a ZIP file of only the</echo>
+    <echo>  article XML files in ${toDir.static}${file.separator}data${file.separator}dhq-xml.zip.</echo>
+    <echo>  Note that, as with "generateIssues", files use absolute filepaths.</echo>
+    <echo>generateSiteToGo</echo>
+    <echo>  As "generateSite" above, but then also creates a compressed archive of the generated</echo>
+    <echo>  output to make it easy to transfer (e.g., to a server). The output file can be found at</echo>
     <echo>  ${toDir.base}${file.separator}${context}.zip.</echo>
   </target>
 
@@ -207,6 +213,9 @@ is loaded when Ant starts up. Please run Ant again like this:
       XML. -->
     <ant antfile="${toDir.base}${file.separator}article-map.xml" dir="${basedir}" 
          target="zipArticleXml" inheritRefs="true"/>
+  </target>
+
+  <target name="generateSiteToGo" depends="generateSite">
     <!-- Generate the ZIP file of the entire static site. -->
     <antcall target="compressStatic"/>
   </target>
